[tool.poetry]
name = "astro-queries"
version = "0.4.10"
description = ""
authors = ["Bastiancito <bastian.gamboa@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
psql-connector = {git = "https://github.com/Bastianciito/psql_connector.git"}
pytest = "^8.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
