[tool.poetry]
name = "astro-queries"
version = "0.5.19"
description = ""
authors = ["Bastiancito <bastian.gamboa@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
psql-connector = {path = "../psql_connector"}
pytest = "^8.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
